--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welkom op Mijn Homepage</title>
+</head>
+<body>
+    <!-- Hier komt de inhoud van je homepage -->
+</body>
+</html>
 
