--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welkom op Mijn Homepage</title>
 </head>
 <body>
-    <!-- Hier komt de inhoud van je homepage -->
+ homepage   <!-- Hier komt de inhoud van je homepage -->
 </body>
 </html>
 
