--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welkom op Mijn Homepage</title>
+    <title>Luuk's Pagina</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+
+        h1 {
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+    </style>
 </head>
 <body>
- homepage   <!-- Hier komt de inhoud van je homepage -->
+    <header>
+        <h1>Welkom op Luuk's Pagina</h1>
+    </header>
+
+    <div class="container">
+        <h2>Over Luuk</h2>
+        <p>Luuk is een enthousiaste jongeman die houdt van voetballen en gamen. Hij brengt zijn vrije tijd graag door met deze twee hobbies.</p>
+
+        <h2>Voetballen</h2>
+        <p>Luuk is een fanatieke voetballer. Hij speelt in zijn vrije tijd vaak op het lokale voetbalveld met zijn vrienden. Hij is een getalenteerde speler en geniet van het teamwork en de competitie op het veld.</p>
+
+        <h2>Gamen</h2>
+        <p>Naast voetballen is Luuk ook een fervent gamer. Hij heeft een uitgebreide collectie videogames en speelt graag zowel solo als met vrienden online. Zijn favoriete genres zijn RPG's, FPS-games en strategische simulaties.</p>
+    </div>
 </body>
 </html>
+
 
