--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welkom op deze Pagina over computers</title>
     <style>
-        body {
+        <body> {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
             margin: 0;
