--- a/index.html
+++ b/index.html
@@ -1,44 +1,10 @@
 <!DOCTYPE html>
-<html lang="nl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>welkom op deze Pagina over computers</title>
-    <style>
-        <body> {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-        }
-
-        h1 {
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        p {
-            font-size: 18px;
-            line-height: 1.6;
-        }
-        </body>
-    </style>
-</head>
+<html>
+    <head>
+        <title>het begin</title>
+        <meta charset="UTF-8">
+    </head>
+    <body>welkom</body>
 </html>
 
 
