--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
         <title>het begin</title>
         <meta charset="UTF-8">
     </head>
-    <body>welkom</body>
+    <body>welkom
+        <h1>Welkom op Mijn Homepage</h1>
+<p>Dit is de startpagina van mijn website. Hier vind je informatie over verschillende onderwerpen.</p>
+<a href="over.html">Lees meer over mij</a>
+
+    </body>
 </html>
 
 
