--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>het begin</title>
         <meta charset="UTF-8">
     </head>
-    <body>welkom
+    <body>
         <h1>Welkom op Mijn Homepage</h1>
 <p>Dit is de startpagina van mijn website. Hier vind je informatie over verschillende onderwerpen.</p>
 
