--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
         <title>het begin</title>
         <meta charset="UTF-8">
     </head>
-    <body>{
-        <font-family>: Arial, sans-serif;
-            background-color: #f0f0f0;
-            margin: 0;
-            padding: 0;
-        </font-family>
-    }
+    <body>
     <h1>Welkom op Mijn Homepage</h1>
 <p>Dit is de startpagina van mijn website. Hier vind je informatie over verschillende onderwerpen.</p>
 <p></p>
