--- a/index.html
+++ b/index.html
@@ -4,6 +4,39 @@
         <title>het begin</title>
         <meta charset="UTF-8">
     </head>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
+
+        h1 {
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+    </style>
     <body>
     <h1>Welkom op Mijn Homepage</h1>
 <p>Dit is de startpagina van mijn website. Hier vind je informatie over verschillende onderwerpen.</p>
