--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     </style>
     <body>
     <h1>Welkom op Mijn Homepage</h1>
-<p>Dit is de startpagina van mijn website. Hier vind je informatie over verschillende onderwerpen.</p>
-<p></p>
+<p>Dit is de startpagina van mijn website. Hier vind je informatie over alle verschillende onderwerpen.</p>
+<p>je vind hier infirmatie over computers</p>
     </body>
 
 </html>
