--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <body>
     <h1>Welkom op Mijn Homepage</h1>
 <p>Dit is de startpagina van mijn website. Hier vind je informatie over alle verschillende onderwerpen.</p>
-<p>je vind hier infirmatie over computers</p>
+<p>je vind hier informatie over computers</p>
     </body>
 
 </html>
