--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
             padding: 0;
         }
 
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+        }
         
         h1 {
             margin: 0;
