--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             text-align: center;
             padding: 20px;
         }
-        
+
         h1 {
             margin: 0;
             padding: 0;
@@ -38,6 +38,9 @@
         }
     </style>
     <body>
+        <header>
+            <h1>Welkom op Luuk's Pagina</h1>
+        </header>
     <h1>Welkom op Mijn Homepage</h1>
 <p>Dit is de startpagina van mijn website. Hier vind je informatie over alle verschillende onderwerpen.</p>
 <p>je vind hier informatie over computers</p>
