--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </style>
     <body>
         <header>
-            <h1>Welkom op Luuk's Pagina</h1>
+            <h1>Welkom op deze Pagina</h1>
         </header>
     <h1>Welkom op Mijn Homepage</h1>
 <p>Dit is de startpagina van mijn website. Hier vind je informatie over alle verschillende onderwerpen.</p>
