--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
         <header>
             <h1>Welkom op deze Pagina</h1>
         </header>
+        <div class="container">
     <h1>Welkom op Mijn Homepage</h1>
 <p>Dit is de startpagina van mijn website. Hier vind je informatie over alle verschillende onderwerpen.</p>
 <p>je vind hier informatie over computers</p>
+</div>
     </body>
 
 </html>
