--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
             <h1>Welkom op deze Pagina</h1>
         </header>
         <div class="container">
-    <h1>Welkom op Mijn Homepage</h1>
-<p>Dit is de startpagina van mijn website. Hier vind je informatie over alle verschillende onderwerpen.</p>
-<p>je vind hier informatie over computers</p>
+    <h1>Dit is de startpagina van mijn website. Hier vind je informatie over alle verschillende onderwerpen.</h1>
+<p>Je vind hier informatie over computers</p>
 </div>
     </body>
 
