--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>het begin</title>
+        <title>brodanappa website</title>
         <meta charset="UTF-8">
     </head>
     <style>
