--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         }
     </style>
     <body>
+        <a href="MijnProjecten">Mijn Projecten</a>
         <header>
             <h1>Welkom op deze Pagina</h1>
         </header>
