--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         }
     </style>
     <body>
-        
+
         <a href="MijnProjecten">Mijn Projecten</a>
 
         <header>
-            <h1>Welkom op deze Pagina</h1>
+            <h1>Welkom op het hoofdmenu.</h1>
         </header>
         <div class="container">
     <h1>Dit is de startpagina van mijn website. Hier vind je informatie over alle verschillende onderwerpen.</h1>
