--- a/index.html
+++ b/index.html
@@ -37,6 +37,45 @@
             line-height: 1.6;
         }
     </style>
+    <style>
+        #sidebar {
+            width: 250px;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            left: -250px;
+            background-color: #333;
+            color: #fff;
+            transition: left 0.3s ease-in-out;
+        }
+
+        #sidebar.folded {
+            left: 0;
+        }
+
+        #sidebar-header {
+            background-color: #222;
+            padding: 15px;
+            text-align: center;
+        }
+
+        .menu-item {
+            padding: 10px;
+            border-bottom: 1px solid #444;
+            text-align: center;
+            cursor: pointer;
+        }
+
+        #content {
+            margin-left: 0;
+            transition: margin-left 0.3s ease-in-out;
+        }
+
+        #sidebar.folded #content {
+            margin-left: 250px;
+        }
+    </style>
+</head>
     <body>
 
         <header>
@@ -45,7 +84,72 @@
         <div class="container">
     <h1>Dit is de startpagina van mijn website. Hier vind je informatie over alle verschillende onderwerpen.</h1>
 <p>Je vind hier informatie over computers</p>
-<a href="MijnProjecten">Mijn Projecten</a>
+<style>
+        #sidebar {
+            width: 250px;
+            height: 100%;
+            position: fixed;
+            top: 0;
+            left: -250px;
+            background-color: #333;
+            color: #fff;
+            transition: left 0.3s ease-in-out;
+        }
+
+        #sidebar.folded {
+            left: 0;
+        }
+
+        #sidebar-header {
+            background-color: #222;
+            padding: 15px;
+            text-align: center;
+        }
+
+        .menu-item {
+            padding: 10px;
+            border-bottom: 1px solid #444;
+            text-align: center;
+            cursor: pointer;
+        }
+
+        #content {
+            margin-left: 0;
+            transition: margin-left 0.3s ease-in-out;
+        }
+
+        #sidebar.folded #content {
+            margin-left: 250px;
+        }
+    </style>
+</head>
+<body>
+
+<div id="sidebar">
+    <div id="sidebar-header">
+        <h2>Sidebar Menu</h2>
+    </div>
+    <div class="menu-item" onclick="toggleSidebar()">Home</div>
+    <div class="menu-item" onclick="toggleSidebar()">About</div>
+    <div class="menu-item" onclick="toggleSidebar()">Services</div>
+    <div class="menu-item" onclick="toggleSidebar()">Contact</div>
+</div>
+
+<div id="content">
+    <button onclick="toggleSidebar()">Menu</button>
+    
+</div>
+
+<script>
+    function toggleSidebar() {
+        var sidebar = document.getElementById('sidebar');
+        var content = document.getElementById('content');
+        sidebar.classList.toggle('folded');
+        content.classList.toggle('folded');
+    }
+</script>
+
+</body>
 </div>
     </body>
 
