--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h1>Welkom op het hoofdmenu.</h1>
         </header>
         <div class="container">
-    <h1>Dit is de startpagina van mijn website. Hier vind je informatie over alle verschillende onderwerpen.</h1>
+    <h1>Dit is de startpagina van mijn website. Hier vind je informatie over mij.</h1>
 <p>Je vind hier informatie over computers</p>
 <style>
         #sidebar {
