--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </header>
         <div class="container">
     <h1>Dit is de startpagina van mijn website. Hier vind je informatie over mij.</h1>
-<p>Je vind hier informatie over computers</p>
+<p>Mijn naam is Luuk en ik ben de maker van deze website.</p>
 <style>
         #sidebar {
             width: 250px;
