--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <div id="sidebar">
     <div id="sidebar-header">
-        <h2>Sidebar Menu</h2>
+        <h2>Menu</h2>
     </div>
     <div class="menu-item" onclick="toggleSidebar()">Home</div>
     <div class="menu-item" onclick="toggleSidebar()">About</div>
