--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div id="sidebar-header">
         <h2>Menu</h2>
     </div>
-    <div class="menu-item" onclick="toggleSidebar()">Home</div>
+    <div class="menu-item"><a href="index.html">Home</a></div>
     <div class="menu-item" onclick="toggleSidebar()">About</div>
     <div class="menu-item" onclick="toggleSidebar()">Services</div>
     <div class="menu-item" onclick="toggleSidebar()">Contact</div>
