--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
         <h2>Menu</h2>
     </div>
     <div class="menu-item"><a href="index.html">Home</a></div>
-    <div class="menu-item" onclick="toggleSidebar()">About</div>
-    <div class="menu-item" onclick="toggleSidebar()">Services</div>
-    <div class="menu-item" onclick="toggleSidebar()">Contact</div>
+    <div class="menu-item"><a href="#">About</a></div>
+    <div class="menu-item"><a href="#">Services</a></div>
+    <div class="menu-item"><a href="#">Contact</a></div>
 </div>
 
 <div id="content">
