--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <h2>Menu</h2>
     </div>
     <div class="menu-item"><a href="index.html">Home</a></div>
-    <div class="menu-item"><a href="MijnProjecten">About</a></div>
+    <div class="menu-item"><a href="MijnProjecten">Computers</a></div>
     <div class="menu-item"><a href="#">Services</a></div>
     <div class="menu-item"><a href="#">Contact</a></div>
 </div>
