--- a/index.html
+++ b/index.html
@@ -121,6 +121,13 @@
         #sidebar.folded #content {
             margin-left: 250px;
         }
+        a:link {
+            color: white;
+
+        }
+        a:visited {
+            color: white;
+        }
     </style>
 </head>
 <body>
