--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
     </div>
     <div class="menu-item"><a href="index.html">Home</a></div>
     <div class="menu-item"><a href="MijnProjecten">Computers</a></div>
-    <div class="menu-item"><a href="#">Services</a></div>
-    <div class="menu-item"><a href="#">Contact</a></div>
+    <div class="menu-item"><a href="#">kleurmodel</a></div>
+    <div class="menu-item"><a href="#">binair stelsel</a></div>
 </div>
 
 <div id="content">
