--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h2>Menu</h2>
     </div>
     <div class="menu-item"><a href="index.html">Home</a></div>
-    <div class="menu-item"><a href="MijnProjecten">Computers</a></div>
+    <div class="menu-item"><a href="computer.html">Computers</a></div>
     <div class="menu-item"><a href="#">kleurmodel</a></div>
     <div class="menu-item"><a href="#">binair stelsel</a></div>
 </div>
