--- a/computer.html
+++ b/computer.html
@@ -79,11 +79,11 @@
     <body>
 
         <header>
-            <h1>Welkom op het hoofdmenu.</h1>
+            <h1>Computers</h1>
         </header>
         <div class="container">
-    <h1>Dit is de startpagina van mijn website. Hier vind je informatie over mij.</h1>
-<p>Mijn naam is Luuk en ik ben de maker van deze website.</p>
+    <h1>Hier vind je informatie over computers.</h1>
+<p></p>
 <style>
         #sidebar {
             width: 250px;
