--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
         #sidebar.folded #content {
             margin-left: 250px;
         }
+        footer {
+            background-color:#333;
+            color:fff;
+            text-align:center;
+            padding:10px 0;    
+        }
     </style>
 </head>
     <body>
