--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         }
         footer {
             background-color:#333;
-            color:fff;
+            color:white;
             text-align:center;
             padding:10px 0;    
         }
