--- a/computer.html
+++ b/computer.html
@@ -36,7 +36,7 @@
             font-size: 18px;
             line-height: 1.6;
         }
-        
+
         #sidebar {
             width: 250px;
             height: 100%;
@@ -119,7 +119,7 @@
         }
     </style>
 </head>
-</body>
+<body>
     <header>
         <h1>Computers</h1>
     </header>
@@ -156,7 +156,7 @@
     <button onclick="toggleSidebar()">Menu</button>
     
 </div>
-
+</body>
 <script>
     function toggleSidebar() {
         var sidebar = document.getElementById('sidebar');
