--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
 
         <style>
-            body {
+            main {
                 font-family: Arial, sans-serif;
                 background-color: #f0f0f0;
                 margin: 0;
@@ -128,6 +128,7 @@
     </head>
  
     <body>
+    <main>
 
         <header>
             <h1>Welkom op het hoofdmenu.</h1>
@@ -152,6 +153,8 @@
     
 </div>
 
+</main>
+
 <footer>
     <p>&copy 2023 Brodanappa</p>
 </footer>
@@ -170,6 +173,8 @@
 </script>
 
 </html>
+
+
 
 
 
