--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <header>
             
-            <button id="menuButton" onclick="toggleSidebar()">☰ Menu</button>
+            <button id="menuButton" onclick="toggleSidebar()">☰</button>
             
             <h1>Welkom op het hoofdmenu.</h1>
         </header>
