--- a/computer.html
+++ b/computer.html
@@ -67,6 +67,13 @@
             left: 0;
         }
 
+        footer {
+            background-color:#333;
+            color:white;
+            text-align:center;
+            padding:10px 0;    
+        }
+
         #sidebar-header {
             background-color: #222;
             padding: 15px;
