--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
         <div class="container">
       	<h1>Dit is de startpagina van mijn website. Hier vind je informatie over mij.</h1>
         <p>Mijn naam is Luuk en ik ben de maker van deze website.</p>
+        <p>Mijn hobbys zijn gamen is voetballen.</p>
+        <p>Ik heb twee katten,eentje heet casper en de andere heet puk.</p>
+        
 
 
         <div id="sidebar">
