--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <p>Mijn naam is Luuk en ik ben de maker van deze website.</p>
         <p>Mijn hobbys zijn gamen is voetballen.</p>
         <p>Ik heb twee katten,eentje heet casper en de andere heet puk.</p>
-        
+
 
 
         <div id="sidebar">
@@ -166,7 +166,7 @@
             </div>
             <div class="menu-item"><a href="index.html">Home</a></div>
             <div class="menu-item"><a href="computer.html">Computers</a></div>
-            <div class="menu-item"><a href="#">kleurmodel</a></div>
+            <div class="menu-item"><a href="kleurmodellen">kleurmodel</a></div>
             <div class="menu-item"><a href="#">binair stelsel</a></div>
         </div>
 
