--- a/computer.html
+++ b/computer.html
@@ -174,7 +174,7 @@
             </div>
             <div class="menu-item"><a href="index.html">Home</a></div>
             <div class="menu-item"><a href="computer.html">Computers</a></div>
-            <div class="menu-item"><a href="#">kleurmodel</a></div>
+            <div class="menu-item"><a href="kleurmodellen">kleurmodel</a></div>
             <div class="menu-item"><a href="#">binair stelsel</a></div>
         </div>
         
