--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -153,7 +153,7 @@
         </header>
 
         <div class="container">
-      	<h1>Hier vind je informatie over kleurmodellen.</h1>
+      	<h1>Je ziet hier een voorbeeld van kleurmodellen.</h1>
         
 
 
