--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -150,7 +150,7 @@
         </header>
 
         <div class="container">
-      	<h1>Je ziet hier een voorbeeld van kleurmodellen.</h1>
+      	<h1>Je ziet op de achtergrond een voorbeeld van kleurmodellen.</h1>
         <p>dit is hoe een kleurmodel werkt:</p>
 
            <p> 1. Basiskleurruimte: Elk kleurmodel begint met een basiskleurruimte.
@@ -176,6 +176,7 @@
               Ontwerpers en kunstenaars gebruiken de kleurmodellen om de gewenste kleureffecten te bereiken
                en ervoor te zorgen dat hun werk er consistent uitziet, ongeacht waar het wordt weergegeven of afgedrukt.
             </p>
+            <p>Al deze voorbeelden zijn te zijn op dde achtergrond.</p>
         
 
 
