--- a/binaire stelsel.html
+++ b/binaire stelsel.html
@@ -148,7 +148,7 @@
             
             <button id="menuButton" onclick="toggleSidebar()">☰</button>
             
-            <h1></h1>
+            <h1>binaire stelsel</h1>
         </header>
 
         <div class="container">
