--- a/binaire stelsel.html
+++ b/binaire stelsel.html
@@ -152,6 +152,7 @@
         </header>
 
         <div class="container">
+            <h>Hier kan je vinden hoe het binaire stelsel werkt</h>
       	<p></p>
 
 
