--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             <div class="menu-item"><a href="computer.html">Computers</a></div>
             <div class="menu-item"><a href="kleurmodellen.html">kleurmodel</a></div>
             <div class="menu-item"><a href="binaire stelsel.html">binair stelsel</a></div>
+            <div class="menu-item"><a href="compressietechniek.html">compressietechniek</a></div>
         </div>
 
 
