--- a/compressietechniek.html
+++ b/compressietechniek.html
@@ -154,7 +154,22 @@
         <div class="container">
             <h1>Hier kan je vinden hoe compressietechniek werkt</h1>
       	
+            <p>Compressietechnieken worden gebruikt om de hoeveelheid gegevens in een bestand te verminderen, meestal met als doel ruimte te besparen en de overdracht van gegevens efficiënter te maken.</p>
+            <p>Er zijn twee belangrijke soorten compressie: lossless en lossy.</p>
 
+            <p>1. Lossless Compressie:
+             - Bij lossless compressie worden gegevens gecomprimeerd zonder verlies van kwaliteit. Dit betekent dat wanneer je de gecomprimeerde gegevens weer uitpakt, ze identiek zijn aan de originele gegevens.
+             - Dit wordt bereikt door herhalende patronen en redundante informatie te detecteren en te elimineren.
+             - Populaire lossless compressie-indelingen zijn ZIP, gzip, en PNG voor afbeeldingen.
+            </p>
+            <p>2. Lossy Compressie:
+             - Bij lossy compressie wordt enige kwaliteit opgeofferd om de bestandsgrootte aanzienlijk te verkleinen. Dit wordt vaak gebruikt bij media zoals afbeeldingen, audio en video.
+             - Niet-essentiële details worden verwijderd, wat soms kan leiden tot merkbare kwaliteitsvermindering.
+             - Populaire lossy compressie-indelingen zijn JPEG voor afbeeldingen, MP3 voor audio en MP4 voor video.
+            </p>
+            <p>Het proces van compressie en decompressie wordt uitgevoerd door speciale algoritmen. Deze algoritmen identificeren herhalingen, patronen en overbodige gegevens in het bestand. Wanneer een bestand wordt gecomprimeerd, wordt het kleiner gemaakt door deze herhalingen en overbodige gegevens te vervangen door kortere representaties.</p>
+
+            <p>Het belangrijkste verschil tussen de twee soorten compressie is dat lossless compressie geen kwaliteitsverlies toestaat, terwijl lossy compressie enige mate van kwaliteitsverlies accepteert om de bestandsgrootte aanzienlijk te verkleinen. De keuze tussen lossless en lossy compressie hangt af van het type gegevens en het beoogde gebruik van het bestand.</p>
 
 
         <div id="sidebar">
