--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -176,7 +176,7 @@
               Ontwerpers en kunstenaars gebruiken de kleurmodellen om de gewenste kleureffecten te bereiken
                en ervoor te zorgen dat hun werk er consistent uitziet, ongeacht waar het wordt weergegeven of afgedrukt.
             </p>
-            <p>Al deze voorbeelden zijn te zijn op dde achtergrond.</p>
+            <p>Al deze voorbeelden zijn te zien op de achtergrond.</p>
         
 
 
