--- a/compressietechniek.html
+++ b/compressietechniek.html
@@ -152,7 +152,7 @@
         </header>
 
         <div class="container">
-            <h1>Hier kan je vinden hoe compressietechniek werkt</h1>
+            <h1>Hier kan je vinden hoe compressietechniek werkt.</h1>
       	
             <p>Compressietechnieken worden gebruikt om de hoeveelheid gegevens in een bestand te verminderen, meestal met als doel ruimte te besparen en de overdracht van gegevens efficiënter te maken.</p>
             <p>Er zijn twee belangrijke soorten compressie: lossless en lossy.</p>
