--- a/index.html
+++ b/index.html
@@ -153,9 +153,10 @@
 
         <div class="container">
       	<h1>Dit is de startpagina van mijn website. Hier vind je informatie over mij.</h1>
-        <p>Mijn naam is Luuk en ik ben de maker van deze website.</p>
-        <p>Mijn hobbys zijn gamen en voetballen.</p>
-        <p>Ik heb twee katten,eentje heet casper en de andere heet puk.</p>
+        <p>Mijn naam is Luuk en ik ben de maker van deze website en ik ben 15 jaar oud.</p>
+        <p>Mijn hobbys zijn gamen en voetballen, maar ook vooral veel buiten zijn.</p>
+        <p>Ik heb twee katten,eentje heet casper en de andere heet puk.
+           Ze zijn erg lief en ik hou veel van ze.</p>
 
 
 
