--- a/computer.html
+++ b/computer.html
@@ -172,7 +172,7 @@
             </div>
             <div class="menu-item"><a href="index.html">Home</a></div>
             <div class="menu-item"><a href="computer.html">Computers</a></div>
-            <div class="menu-item"><a href="kleurmodellen.html">kleurmodel</a></div>
+            <div class="menu-item"><a href="kleurmodellen.html">kleurmodellen</a></div>
             <div class="menu-item"><a href="binaire stelsel.html">binair stelsel</a></div>
             <div class="menu-item"><a href="compressietechniek.html">compressietechniek</a></div>
         </div>
