--- a/binaire stelsel.html
+++ b/binaire stelsel.html
@@ -165,7 +165,7 @@
             </p>
             <p>Hier is een leuk spelletje om het binairestelsel beter te begrijpen!</p>
             <a href="https://games.penjee.com/binary-bonanza/"></a>
-
+        </div>
 
 
         <div id="sidebar">
