--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
             <div class="menu-item"><a href="kleurmodellen.html">kleurmodellen</a></div>
             <div class="menu-item"><a href="binaire stelsel.html">binair stelsel</a></div>
             <div class="menu-item"><a href="compressietechniek.html">compressietechniek</a></div>
+            <div class="menu-item"><a href="Settings.html">Settings</a></div>
         </div>
 
 
