--- a/Settings.html
+++ b/Settings.html
@@ -175,7 +175,7 @@
         </header>
 
         <div class="container">
-      	<h1></h1>
+      	<h1>Coming soon!</h1>
 
         <div id="sidebar">
             <div id="sidebar-header">
