--- a/computer.html
+++ b/computer.html
@@ -159,6 +159,7 @@
         <p>3. Verwerking: De centrale verwerkingseenheid (CPU) van de computer is verantwoordelijk voor het uitvoeren van berekeningen en het verwerken van gegevens. Dit omvat het uitvoeren van instructies van programma's en het manipuleren van gegevens.</p>
 
         <p>4. Uitvoer: De computer geeft resultaten weer op verschillende manieren, zoals op een beeldscherm, via luidsprekers, via een printer, enzovoort. Dit is hoe we de informatie begrijpen die door de computer wordt gegenereerd.</p>
+        <p>kijk <a href="https://telecomabc.nl/c/compressie.html" style="color: blue;">hier</a> voor informatie over de eerste computer!</p>
 
         <div id="sidebar">
             <div id="sidebar-header">
