nhtbdn ghdnbtbdgr sbbegb

--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -177,7 +177,8 @@
                en ervoor te zorgen dat hun werk er consistent uitziet, ongeacht waar het wordt weergegeven of afgedrukt.
             </p>
             <p>Al deze voorbeelden zijn te zien op de achtergrond.</p>
-        
+            <p>kijk <a href="https://jbvisuals.nl/kleurmodellen/" style="color: blue;">hier</a> voor informatie!</p>
+
 
 
         <div id="sidebar">
