--- a/binaire stelsel.html
+++ b/binaire stelsel.html
@@ -163,7 +163,7 @@
             
             <p>4. Conversie naar decimaal: Om een binair getal naar een decimaal getal om te zetten, tel je simpelweg de waarden van elke positie op, waarbij je 1 telt voor elke 1 en 0 telt voor elke 0. Bijvoorbeeld, het binaire getal 1101 is in het decimale stelsel gelijk aan 13 (2^3 + 2^2 + 2^0 = 8 + 4 + 1 = 13).
             </p>
-            <p><a href="https://games.penjee.com/binary-bonanza/" style="color: blue;">hier</a> is een leuk spelletje om het binaire stelsel beter te begrijpen!</p>
+            <p><a href="https://games.penjee.com/binary-bonanza/" style="color: blue;">Hier</a> is een leuk spelletje om het binaire stelsel beter te begrijpen!</p>
             
 
         </div>
