--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
             left: 0;
         }
 
+        img {
+            /* text-align: center; */
+            margin:auto
+        }
+
         #sidebar-header {
             background-color: #222;
             padding: 15px;
