--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
 
         img {
-            /* text-align: center; */
+            text-align: center;
             margin:auto
         }
 
