--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <p>Mijn hobbys zijn gamen en voetballen, maar ook vooral veel buiten zijn.</p>
         <p>Ik heb twee katten,eentje heet casper en de andere heet puk.
            Ze zijn erg lief en ik hou veel van ze.</p>
-        <img src="bengal cats.jpeg" alt="Twee katten">
+        <img src="Casper&Puk.png" alt="Mijn katten">
 
 
 
