--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                 padding: 20px;
                 background-color: #fff;
                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
             }
     
             p {
@@ -66,10 +70,6 @@
             left: 0;
         }
 
-        img {
-            text-align: center;
-            margin:auto
-        }
 
         #sidebar-header {
             background-color: #222;
