--- a/computer.html
+++ b/computer.html
@@ -38,13 +38,17 @@
             padding: 0;
         }
 
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
+        ..container {
+                max-width: 800px;
+                margin: 20px auto;
+                padding: 20px;
+                background-color: #fff;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
 
         p {
             font-size: 18px;
@@ -150,6 +154,7 @@
 
         <div class="container">
         <h1>Hier vind je informatie over computers.</h1>
+        <img src="computer.html" alt="Mijn katten">
         <p>Een computer is een complex apparaat dat verschillende componenten en processen combineert om informatie te verwerken en taken uit te voeren. Hier is een vereenvoudigde uitleg van hoe een computer werkt, geschikt voor een website:</p>
 
         <p>1. Invoer: Een computer begint met het ontvangen van gegevens van verschillende bronnen, zoals toetsenborden, muizen, aanraakschermen, microfoons, camera's en sensoren. Deze gegevens worden omgezet in digitale informatie die de computer kan begrijpen.</p>
