--- a/computer.html
+++ b/computer.html
@@ -46,6 +46,11 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
+        img {
+            width: 50%;
+        }
+
+
         p {
             font-size: 18px;
             line-height: 1.6;
