--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
         <p>Ik heb twee katten,eentje heet casper en de andere heet puk.
            Ze zijn erg lief en ik hou veel van ze.</p>
         <img src="Casper&Puk.png" alt="Mijn katten">
+        <br><br>
+        <p>Klik op deze<a href="https://www.veed.io/view/1e3d8904-8f03-4988-9f2c-433777016a32?panel=share" style="color: blue;">link</a> voor een uitlegvideo over de website. </p>
 
 
 
