--- a/computer.html
+++ b/computer.html
@@ -156,7 +156,7 @@
         <div class="container">
         <h1>Hier vind je informatie over computers.</h1>
         <img src="computer.jpeg" alt="computer">
-        <p>Een computer is een complex apparaat dat verschillende componenten en processen combineert om informatie te verwerken en taken uit te voeren. Hier is een vereenvoudigde uitleg van hoe een computer werkt, geschikt voor een website:</p>
+        <p>Een computer is een complex apparaat dat verschillende componenten en processen combineert om informatie te verwerken en taken uit te voeren.</p>
 
         <p>1. Invoer: Een computer begint met het ontvangen van gegevens van verschillende bronnen, zoals toetsenborden, muizen, aanraakschermen, microfoons, camera's en sensoren. Deze gegevens worden omgezet in digitale informatie die de computer kan begrijpen.</p>
 
