--- a/binaire stelsel.html
+++ b/binaire stelsel.html
@@ -153,7 +153,7 @@
 
         <div class="container">
             <h1>Hier kan je vinden hoe het binaire stelsel werkt.</h1>
-      	    <p>Het binaire stelsel, ook wel het tweetallige stelsel genoemd, is een getalsysteem dat slechts twee cijfers gebruikt: 0 en 1. dit is een kleine uitleg er over:</p>
+      	    <p>Het binaire stelsel, ook wel het tweetallige stelsel genoemd, is een getalsysteem dat slechts twee cijfers gebruikt: 0 en 1.</p>
 
             <p> 1. Basis van 2: Het binaire stelsel is gebaseerd op machten van 2. Elke positie in een binaire getalreeks vertegenwoordigt een machtsfactor van 2. Bijvoorbeeld, het meest rechtse cijfer vertegenwoordigt 2^0 (1), het volgende cijfer links ervan vertegenwoordigt 2^1 (2), het volgende 2^2 (4), en zo verder.</p>
             
